pass in labels for querying
